Добавление бронирования и отзыввов (#2)
* Добавление бронирования и отзыввов

* Исправление замечаний