@@ -1,54 +1,75 @@
 package ru.practicum.item;
 
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.practicum.booking.BookingMapper;
+import ru.practicum.booking.BookingService;
+import ru.practicum.booking.BookingStatus;
+import ru.practicum.booking.dto.BookingInItemDto;
 import ru.practicum.exception.NotFoundException;
 import ru.practicum.exception.PermissionDeniedException;
+import ru.practicum.item.comment.Comment;
+import ru.practicum.item.comment.CommentMapper;
+import ru.practicum.item.comment.CommentRepository;
+import ru.practicum.item.comment.dto.CommentCreateDto;
+import ru.practicum.item.comment.dto.CommentDto;
+import ru.practicum.item.dto.ItemDto;
+import ru.practicum.item.dto.ItemResponseDto;
+import ru.practicum.user.User;
 import ru.practicum.user.UserService;
 
-import java.util.Collections;
-import java.util.List;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.stream.Collectors;
 
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
+@Transactional
 public class ItemService {
-    private final InMemoryItemRepository itemRepository;
+    private final ItemRepository itemRepository;
+    private final CommentRepository commentRepository;
     private final UserService userService;
+    private final BookingService bookingService;
 
 
     public ItemDto saveItem(ItemDto itemDto, Long userId) {
-        userService.getUser(userId);
+        User user = userService.getUserById(userId);
 
-        Item item = ItemMapper.mapToNewItem(itemDto, userId, null);
+        Item item = ItemMapper.mapToNewItem(itemDto);
+
+        item.setOwner(user);
+
         Item newItem = itemRepository.save(item);
 
         return ItemMapper.mapToItemDto(newItem);
     }
 
 
-    public ItemDto updateItem(Long itemId, ItemDto itemDto, Long userId) {
+    public ItemDto updateItem(Long itemId, ItemDto newItem, Long userId) {
 
         userService.getUser(userId);
 
-        Item existingItem = itemRepository.get(itemId)
+        Item existingItem = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundException("Вещь с ID=" + itemId + " не найдена."));
 
 
         validateOwner(userId, existingItem);
 
-        if (itemDto.getName() != null && !itemDto.getName().isBlank()) {
-            existingItem.setName(itemDto.getName());
+        if (newItem.getName() != null) {
+            existingItem.setName(newItem.getName());
         }
-        if (itemDto.getDescription() != null && !itemDto.getDescription().isBlank()) {
-            existingItem.setDescription(itemDto.getDescription());
+
+        if (newItem.getDescription() != null) {
+            existingItem.setDescription(newItem.getDescription());
         }
-        if (itemDto.getAvailable() != null) {
-            existingItem.setAvailable(itemDto.getAvailable());
+
+        if (newItem.getAvailable() != null) {
+            existingItem.setAvailable(newItem.getAvailable());
         }
 
         Item updatedItem = itemRepository.save(existingItem);
@@ -58,27 +79,53 @@ public class ItemService {
 
 
     private void validateOwner(Long userId, Item item) {
-        if (!item.getOwnerId().equals(userId)) {
+        if (!item.getOwner().getId().equals(userId)) {
             throw new PermissionDeniedException("User id = " + userId + " is not the owner of item");
         }
     }
 
+    public ItemResponseDto getItem(Long userId, Long itemId) {
 
-    public ItemDto getItem(Long itemId) {
-        Item item = itemRepository.get(itemId)
-                .orElseThrow(() -> new NotFoundException("Item id = " + itemId + " not found"));
+        Item item = getItemById(itemId);
 
-        return ItemMapper.mapToItemDto(item);
+        List<CommentDto> comments = getCommentsByItemId(itemId);
+
+        if (item.getOwner().getId().equals(userId)) {
+            Map<Long, List<BookingInItemDto>> bookingsMap = getOwnerBookings(userId);
+            return getItemResponseDtoWithBookings(
+                    item,
+                    comments,
+                    bookingsMap.getOrDefault(item.getId(), Collections.emptyList())
+            );
+        }
+
+        return ItemMapper.mapToItemDto(item, null, null, comments);
     }
 
+    public Item getItemById(Long itemId) {
+        return itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item id = " + itemId + " not found"));
+    }
 
-    public List<ItemDto> getItemsByOwner(Long userId) {
+    public List<ItemResponseDto> getItemsByOwner(Long userId) {
 
         userService.getUser(userId);
 
-        return itemRepository.getByOwner(userId).stream()
-                .map(ItemMapper::mapToItemDto)
-                .collect(Collectors.toList());
+        List<Item> items = itemRepository.findByOwner_Id(userId).stream().toList();
+
+        Map<Long, List<CommentDto>> commentsMap = getCommentsByItemIds(items);
+        Map<Long, List<BookingInItemDto>> bookingsMap = getOwnerBookings(userId);
+
+        List<ItemResponseDto> itemDtos = items.stream()
+                .map(item -> getItemResponseDtoWithBookings(
+                                item,
+                                commentsMap.getOrDefault(item.getId(), Collections.emptyList()),
+                                bookingsMap.getOrDefault(item.getId(), Collections.emptyList())
+                        )
+                )
+                .toList();
+
+        return itemDtos;
     }
 
 
@@ -88,8 +135,63 @@ public class ItemService {
             return Collections.emptyList();
         }
 
-        return itemRepository.search(text).stream()
+        return itemRepository.searchByTextContainingIgnoreCase(text).stream()
                 .map(ItemMapper::mapToItemDto)
                 .collect(Collectors.toList());
     }
+
+    public CommentDto createComment(Long authorId, Long itemId, CommentCreateDto commentDto) {
+        User author = userService.getUserById(authorId);
+        Item item = getItemById(itemId);
+
+        bookingService.validateUserBookedItem(authorId, itemId);
+
+        Comment comment = CommentMapper.mapToNewComment(commentDto);
+        comment.setItem(item);
+        comment.setAuthor(author);
+        commentRepository.save(comment);
+
+        return CommentMapper.mapToCommentDto(comment);
+    }
+
+    public List<CommentDto> getCommentsByItemId(Long itemId) {
+        return CommentMapper.mapToCommentDto(commentRepository.findAllByItem_Id(itemId));
+    }
+
+    private Map<Long, List<CommentDto>> getCommentsByItemIds(List<Item> items) {
+        List<Long> itemIds = items.stream().map(Item::getId).toList();
+        return commentRepository.findAllByItem_IdIn(itemIds)
+                .stream()
+                .map(CommentMapper::mapToCommentDto)
+                .collect(Collectors.groupingBy(CommentDto::getId));
+    }
+
+    private Map<Long, List<BookingInItemDto>> getOwnerBookings(Long ownerId) {
+        return bookingService.getAllBookingsByOwner(ownerId)
+                .stream()
+                .map(BookingMapper::mapToBookingInItemDto)
+                .collect(Collectors.groupingBy(BookingInItemDto::getId));
+    }
+
+    private ItemResponseDto getItemResponseDtoWithBookings(Item item, List<CommentDto> comments, List<BookingInItemDto> bookings) {
+        LocalDateTime currentDate = LocalDateTime.now();
+
+        Optional<BookingInItemDto> lastBooking = bookings.stream()
+                .filter(
+                        booking -> booking.getItem().getId().equals(item.getId())
+                                && booking.getStatus() == BookingStatus.APPROVED
+                                && booking.getStart().isBefore(currentDate)
+                )
+                .max(Comparator.comparing(BookingInItemDto::getEnd));
+
+        Optional<BookingInItemDto> nextBooking = bookings.stream()
+                .filter(booking -> booking.getItem().getId().equals(item.getId())
+                        && booking.getStatus() == BookingStatus.APPROVED
+                        && booking.getStart().isAfter(currentDate)
+                )
+                .min(Comparator.comparing(booking -> booking.getStart()));
+
+        return ItemMapper.mapToItemDto(item, lastBooking, nextBooking, comments);
+    }
+
 }
